--- a/workspace/files/ui/templates/files/ui/index.html
+++ b/workspace/files/ui/templates/files/ui/index.html
@@ -177,7 +177,7 @@
     <!-- Toggle Button (Always at bottom) -->
     <div class="border-t border-base-300 py-4 px-3">
       <ul class="menu p-0" x-show="!isMobile()">
-        {% include "ui/partials/drawer_item.html" with icon_binding="collapsed ? 'panel-left-open' : 'panel-left-close'" label="Collapse" onclick="toggleCollapse()" title_binding="collapsed ? 'Expand sidebar' : 'Collapse sidebar'" aria_label_binding="collapsed ? 'Expand sidebar' : 'Collapse sidebar'" %}
+        {% include "ui/partials/drawer_item.html" with icon_binding="collapsed ? 'panel-left-open' : 'panel-left-close'" label="Collapse" color="primary" onclick="toggleCollapse()" title_binding="collapsed ? 'Expand sidebar' : 'Collapse sidebar'" aria_label_binding="collapsed ? 'Expand sidebar' : 'Collapse sidebar'" %}
       </ul>
     </div>
   </aside>
