--- a/workspace/mail/ui/templates/mail/ui/partials/folder_context_menu.html
+++ b/workspace/mail/ui/templates/mail/ui/partials/folder_context_menu.html
@@ -21,6 +21,12 @@
         <span>Mark all as read</span>
       </button>
     </li>
+    <li>
+      <button type="button" class="gap-3 rounded" @click="folderCtxAction('change_icon')">
+        <i data-lucide="palette" class="w-4 h-4"></i>
+        <span>Change icon</span>
+      </button>
+    </li>
     <hr class="my-1 border-base-300" />
     <li>
       <button type="button" class="gap-3 rounded" @click="folderCtxAction('sync')">
